{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 18,
  "lineage": "1a3ad6d1-e0be-ada9-a453-cac073246765",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469787303691:internet-gateway/igw-0fd46dad55d138478",
            "id": "igw-0fd46dad55d138478",
            "owner_id": "469787303691",
            "tags": {
              "Name": "react-asgnmnt-igw"
            },
            "tags_all": {
              "Name": "react-asgnmnt-igw"
            },
            "vpc_id": "vpc-0b959bdda64493cc3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469787303691:route-table/rtb-0837b4bfb8fd4404d",
            "id": "rtb-0837b4bfb8fd4404d",
            "owner_id": "469787303691",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd46dad55d138478",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "react-asgnmnt-rt1"
            },
            "tags_all": {
              "Name": "react-asgnmnt-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b959bdda64493cc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469787303691:route-table/rtb-05b8f54e737bd9123",
            "id": "rtb-05b8f54e737bd9123",
            "owner_id": "469787303691",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd46dad55d138478",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "react-asgnmnt-rt2"
            },
            "tags_all": {
              "Name": "react-asgnmnt-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b959bdda64493cc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b65ed2e939bee54",
            "route_table_id": "rtb-0837b4bfb8fd4404d",
            "subnet_id": "subnet-0cde6352b363f28a5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0751aab551d490bb5",
            "route_table_id": "rtb-05b8f54e737bd9123",
            "subnet_id": "subnet-0eddf1ae951cbea47"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt2",
            "aws_subnet.public-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469787303691:security-group/sg-04bbe64dab264d57f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bbe64dab264d57f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240528143752752100000005",
            "name_prefix": "terraform-",
            "owner_id": "469787303691",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "react-asgnmnt-sg"
            },
            "tags_all": {
              "Name": "react-asgnmnt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b959bdda64493cc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469787303691:subnet/subnet-0eddf1ae951cbea47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eddf1ae951cbea47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "469787303691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-asgnmnt-subnet2"
            },
            "tags_all": {
              "Name": "react-asgnmnt-subnet2"
            },
            "vpc_id": "vpc-0b959bdda64493cc3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469787303691:subnet/subnet-0cde6352b363f28a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde6352b363f28a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "469787303691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-asgnmnt-subnet1"
            },
            "tags_all": {
              "Name": "react-asgnmnt-subnet1"
            },
            "vpc_id": "vpc-0b959bdda64493cc3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469787303691:vpc/vpc-0b959bdda64493cc3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0932544bfa94e0131",
            "default_route_table_id": "rtb-0ed472d4fb5715e34",
            "default_security_group_id": "sg-0db7566248bdc2bce",
            "dhcp_options_id": "dopt-06952109a2c552440",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b959bdda64493cc3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed472d4fb5715e34",
            "owner_id": "469787303691",
            "tags": {
              "Name": "react-asgnmnt-vpc"
            },
            "tags_all": {
              "Name": "react-asgnmnt-vpc"
            }
          }
        }
      ]
    }
  ]
}